Stubbed out Scoreboard html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS Version 4 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>Laser Tag!</title>
@@ -14,6 +14,16 @@
   <body>
     <div class="container-fluid min-vw-100 min-vh-100 d-flex align-items-center justify-content-center">
         <img id="splashscreen" src="logo.png">
+        <div class="container=fluid">
+          <div class="row">
+            <div class="col-6">
+              <!-- Inside here will be a series of rows containing columns for each players checkbox, name, score, etc -->
+            </div>
+            <div class="col-6">
+              
+            </div>
+          </div>
+        </div>
     </div>
 
     <!-- Optional JavaScript -->
