--- a/server-root/index.html
+++ b/server-root/index.html
@@ -21,15 +21,44 @@
     <div class="container d-flex align-items-center justify-content-center">
       <img class="img-fluid" id="splashscreen" src="logo.png">
       <div class="container" id="scoreboard" style="display:none;">
-        <div class="row">
-          <h1>DELETE ME: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
-          <div class="col-6">
-            <!-- Inside here will be a series of rows containing columns for each players checkbox, name, score, etc -->
-          </div>
-          <div class="col-6">
+        <form action="/" method="get" >
 
+          <div class="row">  
+            <div class="col-6 text-right text-danger">
+
+              <label for="id1">id</label>
+              <input type="text" id="id1" name="id1"><br>
+              <label for="nickname1">nickname</label>
+              <input type="text" id="nickname1" name="nickname1"><br><br>
+
+              <label for="id2">id</label>
+              <input type="text" id="id2" name="id1"><br>
+              <label for="nickname2">nickname</label>
+              <input type="text" id="nickname2" name="nickname2"><br><br>
+
+            </div>
+
+            <div class="col-6 text-right text-success">
+
+              <label for="id3">id</label>
+              <input type="text" id="id1" name="id3"><br>
+              <label for="nickname3">nickname</label>
+              <input type="text" id="nickname3" name="nickname3"><br><br>
+
+              <label for="id4">id</label>
+              <input type="text" id="id4" name="id4"><br>
+              <label for="nickname4">nickname</label>
+              <input type="text" id="nickname4" name="nickname4"><br><br>
+  
+            </div>
           </div>
-        </div>
+
+          <br>
+          <div class="row justify-content-end">
+            <input class="btn btn-primary mx-3" type="submit" formmethod="post" value="This button needs and event listener to preventDefault() and post scoreboard to server without page reload">
+          </div>
+
+        </form>
       </div>
     </div>
   </div>
