--- a/server-root/index.html
+++ b/server-root/index.html
@@ -165,7 +165,7 @@
               <input class="mb-2 px300w"  type="text" id="nickname40" name="nickname40"><br>
             </div>
           </div>
-          <div class="row justify-content-end mt-2 mr-4">
+          <div class="row justify-content-end mt-2 mr-4" id = "timer">
             <input class="btn btn-primary mx-3 px-5" type="submit" formmethod="post"
               value="Start Game!">
           </div>
