moved/renamed id to countDownTimer and moves to playAction screen

--- a/server-root/index.html
+++ b/server-root/index.html
@@ -165,8 +165,8 @@
               <input class="mb-2 px300w"  type="text" id="nickname40" name="nickname40"><br>
             </div>
           </div>
-          <div class="row justify-content-end mt-2 mr-4" id = "timer">
-            <input class="btn btn-primary mx-3 px-5" type="submit" formmethod="post"
+          <div class="row justify-content-end mt-2 mr-4">
+            <input class="btn btn-primary mx-3 px-5" type="submit" formmethod="post" id = "countDownButton"
               value="Start Game!">
           </div>
 
@@ -198,6 +198,13 @@
 
         </form>
       </div>
+
+      <div class="container-fluid text-center" id="playAction" style="display:none;">
+        <h1>
+          PLAYACTION
+        </h1>
+      </div>  
+
     </div>
   </div>
   </div>
