--- a/server-root/index.html
+++ b/server-root/index.html
@@ -199,11 +199,65 @@
         </form>
       </div>
 
-      <div class="container-fluid text-center" id="playAction" style="display:none;">
-        <h1>
-          PLAYACTION
-        </h1>
-      </div>  
+      <!-- Player Action Screen -->
+	<div	class = "container-fluid"
+	      	id="playAction" 
+		style="display:none;">
+	<table style = "width:100%; text-align:center; border: 1px solid black;">
+		<!-- Row 1 -->
+		<tr style = "font-size: 50px;">
+			<th></th>
+			<th id = "PASteam1"
+			    class = "text-danger">TEAM 1</th>
+			<th></th>
+			<th id = "playActionTimer" style="color:white;"></th>
+			<th></th>
+			<th id = "PASteam2"
+			    class = "text-success">TEAM 2</th>
+			<th></th>
+		</tr>
+		<!-- Row 2 -->
+		<tr style="color:white;">
+			<th>#1</th>
+			<td>PLAYER 1</td>
+			<td>000</td>
+			<th></th>
+			<th>#1</th>
+			<td>PLAYER 1</td>
+			<td>000</td>
+		</tr>
+		<!-- Row 3 -->
+		<tr style="color:white;">
+			<th>#2</th>
+			<td>PLAYER 2</td>
+			<td>000</td>
+			<th></th>
+			<th>#2</th>
+			<td>PLAYER 2</td>
+			<td>000</td>
+		</tr>
+		<!-- Row 4 -->
+		<tr style="color:white;">
+			<th>#3</th>
+			<td>PLAYER 3</td>
+			<td>000</td>
+			<th></th>
+			<th>#3</th>
+			<td>PLAYER 3</td>
+			<td>000</td>
+		</tr>
+		<!-- Row 5 -->
+		<tr style="color:white; font-size:20px;">
+			<td></td>
+			<td>TEAM SCORE:</td>
+			<td>000</td>
+			<td></td>
+			<td></td>
+			<td>TEAM SCORE:</td>
+			<td>000</td>
+		</tr>
+	</table>
+       </div>
 
     </div>
   </div>
