--- a/server-root/index.html
+++ b/server-root/index.html
@@ -195,31 +195,31 @@
 		<!-- Row 2 -->
 		<tr style="color:white;">
 			<th>#1</th>
-			<td>PLAYER 1</td>
+			<td id = "redP1-Nickname">PLAYER 1</td>
 			<td>000</td>
 			<th></th>
 			<th>#1</th>
-			<td>PLAYER 1</td>
+			<td id = "greenP1-Nickname">PLAYER 1</td>
 			<td>000</td>
 		</tr>
 		<!-- Row 3 -->
 		<tr style="color:white;">
 			<th>#2</th>
-			<td>PLAYER 2</td>
+			<td id = "redP2-Nickname">PLAYER 2</td>
 			<td>000</td>
 			<th></th>
 			<th>#2</th>
-			<td>PLAYER 2</td>
+			<td id = "greenP2-Nickname">PLAYER 2</td>
 			<td>000</td>
 		</tr>
 		<!-- Row 4 -->
 		<tr style="color:white;">
 			<th>#3</th>
-			<td>PLAYER 3</td>
+			<td id = "redP3-Nickname">PLAYER 3</td>
 			<td>000</td>
 			<th></th>
 			<th>#3</th>
-			<td>PLAYER 3</td>
+			<td id = "greenP3-Nickname">PLAYER 3</td>
 			<td>000</td>
 		</tr>
 		<!-- Row 5 -->
