Implemented Functionality to Update PAS with Nicknames and Scores This has not been tested yet, because I noticed that the JS code is very CPU intensive and slowly consumes memory for some reason. I'd keep your "Task Manager"-like program open while running this version of it.

--- a/server-root/index.html
+++ b/server-root/index.html
@@ -196,31 +196,31 @@
 		<tr style="color:white;">
 			<th>#1</th>
 			<td id = "redP1-Nickname">PLAYER 1</td>
-			<td>000</td>
+			<td id = "redP1-NumPoints">000</td>
 			<th></th>
 			<th>#1</th>
 			<td id = "greenP1-Nickname">PLAYER 1</td>
-			<td>000</td>
+			<td id = "greenP1-NumPoints">000</td>
 		</tr>
 		<!-- Row 3 -->
 		<tr style="color:white;">
 			<th>#2</th>
 			<td id = "redP2-Nickname">PLAYER 2</td>
-			<td>000</td>
+			<td id = "redP2-NumPoints">000</td>
 			<th></th>
 			<th>#2</th>
 			<td id = "greenP2-Nickname">PLAYER 2</td>
-			<td>000</td>
+			<td id = "greenP2-NumPoints">000</td>
 		</tr>
 		<!-- Row 4 -->
 		<tr style="color:white;">
 			<th>#3</th>
 			<td id = "redP3-Nickname">PLAYER 3</td>
-			<td>000</td>
+			<td id = "redP3-NumPoints">000</td>
 			<th></th>
 			<th>#3</th>
 			<td id = "greenP3-Nickname">PLAYER 3</td>
-			<td>000</td>
+			<td id = "greenP3-NumPoints">000</td>
 		</tr>
 		<!-- Row 5 -->
 		<tr style="color:white; font-size:20px;">
