commited out row 4 of playerActionScreen

--- a/server-root/index.html
+++ b/server-root/index.html
@@ -175,7 +175,7 @@
         <br>
       </div>
 
-      <!-- Player Action Screen -->
+ <!-- Player Action Screen -->
 	<div	class = "container-fluid"
 	      	id="playAction" 
 		style="display:none;">
@@ -194,43 +194,45 @@
 		</tr>
 		<!-- Row 2 -->
 		<tr style="color:white;">
-			<th>#1</th>
+			<th id = "redPlayer1_ID">#1</th>
 			<td id = "redP1-Nickname">PLAYER 1</td>
-			<td>000</td>
+			<td id = "redP1-NumPoints">000</td>
 			<th></th>
-			<th>#1</th>
+			<th id = "greenPlayer1_ID">#1</th>
 			<td id = "greenP1-Nickname">PLAYER 1</td>
-			<td>000</td>
+			<td id = "greenP1-NumPoints">000</td>
 		</tr>
 		<!-- Row 3 -->
 		<tr style="color:white;">
-			<th>#2</th>
+			<th id = "redPlayer2_ID">#2</th>
 			<td id = "redP2-Nickname">PLAYER 2</td>
-			<td>000</td>
+			<td id = "redP2-NumPoints">000</td>
 			<th></th>
-			<th>#2</th>
+			<th id = "greenPlayer2_ID">#2</th>
 			<td id = "greenP2-Nickname">PLAYER 2</td>
-			<td>000</td>
+			<td id = "greenP2-NumPoints">000</td>
 		</tr>
 		<!-- Row 4 -->
-		<tr style="color:white;">
+<!-- 		
+    <tr style="color:white;">
 			<th>#3</th>
 			<td id = "redP3-Nickname">PLAYER 3</td>
-			<td>000</td>
+			<td id = "redP3-NumPoints">000</td>
 			<th></th>
 			<th>#3</th>
 			<td id = "greenP3-Nickname">PLAYER 3</td>
-			<td>000</td>
+			<td id = "greenP3-NumPoints">000</td>
 		</tr>
+  -->
 		<!-- Row 5 -->
 		<tr style="color:white; font-size:20px;">
 			<td></td>
 			<td>TEAM SCORE:</td>
-			<td>000</td>
+			<td id = "redTeamNumPoints">000</td>
 			<td></td>
 			<td></td>
 			<td>TEAM SCORE:</td>
-			<td>000</td>
+			<td id = "greenTeamNumPoints">000</td>
 		</tr>
 	</table>
        </div>
