"Added action ticker"

--- a/server-root/index.html
+++ b/server-root/index.html
@@ -78,25 +78,25 @@
 
             <div class="col-4 text-left text-danger">
               <input class="mb-2 px300w" type="text" id="nickname1" name="nickname1"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname2" name="nickname2"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname3" name="nickname3"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname4" name="nickname4"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname5" name="nickname5"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname6" name="nickname6"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname7" name="nickname7"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname8" name="nickname8"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname9" name="nickname9"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname10" name="nickname10"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname11" name="nickname11"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname12" name="nickname12"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname13" name="nickname13"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname14" name="nickname14"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname15" name="nickname15"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname16" name="nickname16"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname17" name="nickname17"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname18" name="nickname18"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname19" name="nickname19"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname20" name="nickname20"><br>
+              <input class="mb-2 px300w" type="text" id="nickname2" name="nickname2"><br>
+              <input class="mb-2 px300w" type="text" id="nickname3" name="nickname3"><br>
+              <input class="mb-2 px300w" type="text" id="nickname4" name="nickname4"><br>
+              <input class="mb-2 px300w" type="text" id="nickname5" name="nickname5"><br>
+              <input class="mb-2 px300w" type="text" id="nickname6" name="nickname6"><br>
+              <input class="mb-2 px300w" type="text" id="nickname7" name="nickname7"><br>
+              <input class="mb-2 px300w" type="text" id="nickname8" name="nickname8"><br>
+              <input class="mb-2 px300w" type="text" id="nickname9" name="nickname9"><br>
+              <input class="mb-2 px300w" type="text" id="nickname10" name="nickname10"><br>
+              <input class="mb-2 px300w" type="text" id="nickname11" name="nickname11"><br>
+              <input class="mb-2 px300w" type="text" id="nickname12" name="nickname12"><br>
+              <input class="mb-2 px300w" type="text" id="nickname13" name="nickname13"><br>
+              <input class="mb-2 px300w" type="text" id="nickname14" name="nickname14"><br>
+              <input class="mb-2 px300w" type="text" id="nickname15" name="nickname15"><br>
+              <input class="mb-2 px300w" type="text" id="nickname16" name="nickname16"><br>
+              <input class="mb-2 px300w" type="text" id="nickname17" name="nickname17"><br>
+              <input class="mb-2 px300w" type="text" id="nickname18" name="nickname18"><br>
+              <input class="mb-2 px300w" type="text" id="nickname19" name="nickname19"><br>
+              <input class="mb-2 px300w" type="text" id="nickname20" name="nickname20"><br>
             </div>
 
             <div class="col-2 text-right text-success">
@@ -144,29 +144,29 @@
 
             <div class="col-4 text-left text-success">
               <input class="mb-2 px300w" type="text" id="nickname21" name="nickname21"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname22" name="nickname22"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname23" name="nickname23"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname24" name="nickname24"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname25" name="nickname25"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname26" name="nickname26"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname27" name="nickname27"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname28" name="nickname28"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname29" name="nickname29"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname30" name="nickname30"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname31" name="nickname31"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname32" name="nickname32"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname33" name="nickname33"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname34" name="nickname34"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname35" name="nickname35"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname36" name="nickname36"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname37" name="nickname37"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname38" name="nickname38"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname39" name="nickname39"><br>
-              <input class="mb-2 px300w"  type="text" id="nickname40" name="nickname40"><br>
+              <input class="mb-2 px300w" type="text" id="nickname22" name="nickname22"><br>
+              <input class="mb-2 px300w" type="text" id="nickname23" name="nickname23"><br>
+              <input class="mb-2 px300w" type="text" id="nickname24" name="nickname24"><br>
+              <input class="mb-2 px300w" type="text" id="nickname25" name="nickname25"><br>
+              <input class="mb-2 px300w" type="text" id="nickname26" name="nickname26"><br>
+              <input class="mb-2 px300w" type="text" id="nickname27" name="nickname27"><br>
+              <input class="mb-2 px300w" type="text" id="nickname28" name="nickname28"><br>
+              <input class="mb-2 px300w" type="text" id="nickname29" name="nickname29"><br>
+              <input class="mb-2 px300w" type="text" id="nickname30" name="nickname30"><br>
+              <input class="mb-2 px300w" type="text" id="nickname31" name="nickname31"><br>
+              <input class="mb-2 px300w" type="text" id="nickname32" name="nickname32"><br>
+              <input class="mb-2 px300w" type="text" id="nickname33" name="nickname33"><br>
+              <input class="mb-2 px300w" type="text" id="nickname34" name="nickname34"><br>
+              <input class="mb-2 px300w" type="text" id="nickname35" name="nickname35"><br>
+              <input class="mb-2 px300w" type="text" id="nickname36" name="nickname36"><br>
+              <input class="mb-2 px300w" type="text" id="nickname37" name="nickname37"><br>
+              <input class="mb-2 px300w" type="text" id="nickname38" name="nickname38"><br>
+              <input class="mb-2 px300w" type="text" id="nickname39" name="nickname39"><br>
+              <input class="mb-2 px300w" type="text" id="nickname40" name="nickname40"><br>
             </div>
           </div>
           <div class="row justify-content-end mt-2 mr-4">
-            <input class="btn btn-primary mx-3 px-5" type="submit" formmethod="post" id = "countDownButton"
+            <input class="btn btn-primary mx-3 px-5" type="submit" formmethod="post" id="countDownButton"
               value="Start Game!">
           </div>
 
@@ -175,70 +175,80 @@
         <br>
       </div>
 
- <!-- Player Action Screen -->
-	<div	class = "container-fluid"
-	      	id="playAction" 
-		style="display:none;">
-	<table style = "width:100%; text-align:center; border: 1px solid black;">
-		<!-- Row 1 -->
-		<tr style = "font-size: 50px;">
-			<th></th>
-			<th id = "PASteam1"
-			    class = "text-danger">TEAM 1</th>
-			<th></th>
-			<th id = "playActionTimer" style="color:white;"></th>
-			<th></th>
-			<th id = "PASteam2"
-			    class = "text-success">TEAM 2</th>
-			<th></th>
-		</tr>
-		<!-- Row 2 -->
-		<tr style="color:white;">
-			<th id = "redPlayer1_ID">#1</th>
-			<td id = "redP1-Nickname">PLAYER 1</td>
-			<td id = "redP1-NumPoints">000</td>
-			<th></th>
-			<th id = "greenPlayer1_ID">#1</th>
-			<td id = "greenP1-Nickname">PLAYER 1</td>
-			<td id = "greenP1-NumPoints">000</td>
-		</tr>
-		<!-- Row 3 -->
-		<tr style="color:white;">
-			<th id = "redPlayer2_ID">#2</th>
-			<td id = "redP2-Nickname">PLAYER 2</td>
-			<td id = "redP2-NumPoints">000</td>
-			<th></th>
-			<th id = "greenPlayer2_ID">#2</th>
-			<td id = "greenP2-Nickname">PLAYER 2</td>
-			<td id = "greenP2-NumPoints">000</td>
-		</tr>
-		<!-- Row 4 -->
-<!-- 		
-    <tr style="color:white;">
-			<th>#3</th>
-			<td id = "redP3-Nickname">PLAYER 3</td>
-			<td id = "redP3-NumPoints">000</td>
-			<th></th>
-			<th>#3</th>
-			<td id = "greenP3-Nickname">PLAYER 3</td>
-			<td id = "greenP3-NumPoints">000</td>
-		</tr>
-  -->
-		<!-- Row 5 -->
-		<tr style="color:white; font-size:20px;">
-			<td></td>
-			<td>TEAM SCORE:</td>
-			<td id = "redTeamNumPoints">000</td>
-			<td></td>
-			<td></td>
-			<td>TEAM SCORE:</td>
-			<td id = "greenTeamNumPoints">000</td>
-		</tr>
-	</table>
-       </div>
+      <!-- Player Action Screen -->
+      <div class="container-fluid" id="playAction" style="display:none;">
+        <table style="width:100%; text-align:center; border: 1px solid black;">
+          <!-- Row 1 -->
+          <tr style="font-size: 50px;">
+            <th></th>
+            <th id="PASteam1" class="text-danger">TEAM 1</th>
+            <th></th>
+            <th id="playActionTimer" style="color:white;"></th>
+            <th></th>
+            <th id="PASteam2" class="text-success">TEAM 2</th>
+            <th></th>
+          </tr>
+          <!-- Row 2 -->
+          <tr style="color:white;">
+            <th id="redPlayer1_ID">#1</th>
+            <td id="redP1-Nickname">PLAYER 1</td>
+            <td id="redP1-NumPoints">000</td>
+            <th></th>
+            <th id="greenPlayer1_ID">#1</th>
+            <td id="greenP1-Nickname">PLAYER 1</td>
+            <td id="greenP1-NumPoints">000</td>
+          </tr>
+          <!-- Row 3 -->
+          <tr style="color:white;">
+            <th id="redPlayer2_ID">#2</th>
+            <td id="redP2-Nickname">PLAYER 2</td>
+            <td id="redP2-NumPoints">000</td>
+            <th></th>
+            <th id="greenPlayer2_ID">#2</th>
+            <td id="greenP2-Nickname">PLAYER 2</td>
+            <td id="greenP2-NumPoints">000</td>
+          </tr>
+          <!-- Row 4 -->
+          <!-- 		
+              <tr style="color:white;">
+                <th>#3</th>
+                <td id = "redP3-Nickname">PLAYER 3</td>
+                <td id = "redP3-NumPoints">000</td>
+                <th></th>
+                <th>#3</th>
+                <td id = "greenP3-Nickname">PLAYER 3</td>
+                <td id = "greenP3-NumPoints">000</td>
+              </tr>
+            -->
+          <!-- Row 5 -->
+          <tr style="color:white; font-size:20px;">
+            <td></td>
+            <td>TEAM SCORE:</td>
+            <td id="redTeamNumPoints">000</td>
+            <td></td>
+            <td></td>
+            <td>TEAM SCORE:</td>
+            <td id="greenTeamNumPoints">000</td>
+          </tr>
+        </table>
 
+        <br>
+        <!-- Events ticker -->
+        <div class="container-fluid text-white border border-warning rounded text-center" id="hitevents">
+          <br>
+          <p class="lead" id="he0">&emsp;</p>
+          <p class="lead" id="he1">&emsp;</p>
+          <p class="lead" id="he2">&emsp;</p>
+          <p class="lead" id="he3">&emsp;</p>
+          <p class="lead" id="he4">&emsp;</p>
+          <p class="lead" id="he5">&emsp;</p>
+          <p class="lead" id="he6">&emsp;</p>
+          <p class="lead" id="he7">&emsp;</p>
+          <p class="lead" id="he8">&emsp;</p>
+          <p class="lead" id="he9">&emsp;</p>
+        </div>
+      </div>
     </div>
-  </div>
   </div>
 
   <!-- Optional JavaScript -->
